--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -24,8 +24,25 @@
   transition: all .3s,padding 0s;
 }
 
+.ant-menu.ant-menu-dark, .ant-menu-dark .ant-menu-sub {
+  background: #bc8a0e;
+}
+
+.ant-menu-dark.ant-menu-dark:not(.ant-menu-horizontal) .ant-menu-item-selected {
+  background-color: #cda74a;
+}
 .trigger:hover {
-  color: #1890ff;
+  color: #cda74a;
+}
+
+// .ant-menu.ant-menu-dark, .ant-menu-dark .ant-menu-sub {
+//   color: rgba(255, 255, 255, 0.65);
+//   background: #795600;
+// }
+
+.ant-layout-sider {
+  background: #bc8a0e;
+  transition: all 0.2s;
 }
 
 .sidebar-logo {
@@ -34,7 +51,7 @@
   padding-left: 24px;
   overflow: hidden;
   line-height: 64px;
-  background: #001529;
+  background: #bc8a0e;
   transition: all .3s;
 }
 
