--- a/src/styles.less
+++ b/src/styles.less
@@ -894,3 +894,7 @@
 @notification-bg: @component-background;
 
 /* You can add global styles to this file, and also import other style files */
+
+.ant-menu .ant-menu-inline .ant-menu-sub  {
+  background: #795600 !important;
+}
