--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,29 +6,32 @@
             [(nzCollapsed)]="isCollapsed"
             [nzTrigger]="null">
     <div class="sidebar-logo">
-      <a href="https://ng.ant.design/" target="_blank">
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-        <h1>Ant Design Of Angular</h1>
+      <a href="#" target="_blank">
+        <img src="../assets/images/450px-University_of_Zimbabwe_LOGO.png" alt="logo">
+        <h1>IOT Power Usage</h1>
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
       <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
-        <ul>
+        <ul class="ant-menu-sub">
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/welcome">Welcome</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a>Monitor</a>
+            <a routerLink="/monitor">Monitor</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a>Workplace</a>
+            <a routerLink="/work-place">Workplace</a>
           </li>
         </ul>
       </li>
       <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
-        <ul>
+        <ul class="ant-menu-sub">
           <li nz-menu-item nzMatchRouter>
-            <a>Basic Form</a>
+            <a routerLink="/appliance">Appliance</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/status">Status</a>
           </li>
         </ul>
       </li>
