--- a/src/styles.less
+++ b/src/styles.less
@@ -895,6 +895,56 @@
 
 /* You can add global styles to this file, and also import other style files */
 
-.ant-menu .ant-menu-inline .ant-menu-sub  {
-  background: #795600 !important;
+.icon-delete, .icon-close{
+  color: @error-color;
+}
+.icon-edit{
+  color: @warning-color
+}
+.icon-info{
+  color: @info-color
+}
+.icon-check{
+  color:@success-color
+}
+.right{
+  float: right;
+}
+.hide{
+  display: none;
+}
+.tablerow-selected{
+  background-color: @item-hover-bg;
+}
+.title {
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.85);
+  line-height: 24px;
+  display: block;
+  margin-bottom: 16px;
+}
+.item-wrap {
+  font-size: 14px;
+  line-height: 22px;
+  margin-bottom: 7px;
+  color: rgba(0, 0, 0, 0.65);
+}
+.label {
+  margin-right: 8px;
+  display: inline-block;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.search-button-report{
+  margin-top: 31px;
+}
+.logout-header{
+  font-size: medium;
+  font-weight: bold;
+  float: right;
+  margin-right: 5em;
+}
+.logout{
+    margin-left: 2em;
+    color: red;
 }
