--- a/src/app/components/household-trend-chart/household-trend-chart.component.html
+++ b/src/app/components/household-trend-chart/household-trend-chart.component.html
@@ -1,1 +1,3 @@
+<nz-date-picker [(ngModel)]="date" (ngModelChange)="onChange($event)"></nz-date-picker>
+    <br />
 <div class="graphHeightFull" id="chartdiv"></div>
